--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
 
     <header>
         <h1>Discover hidden places in the world around you</h1>
+        <p><a href="#"> Download Excursion (Coming Soon!)</a></p>
+        <video width="400" height="700" autoplay="autoplay" muted="muted">
+            <source src="Resources/Videos/excursion.mp4"> 
+        </video>
     </header>
+    <div id="travel">
+            <h1>Your Personal Travel Guide</h1>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <img src="Resources/Images/camp.jpg" alt="Campsite">
+    </div>
+
         
         <script src="" async defer></script>
     </body>
