--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+        <script src="" async defer></script>
+    <!-- header -->
     <header>
         <h1>Discover hidden places in the world around you</h1>
         <p><a href="#"> Download Excursion (Coming Soon!)</a></p>
@@ -23,13 +25,21 @@
             <source src="Resources/Videos/excursion.mp4"> 
         </video>
     </header>
+    <!-- Travel -->
     <div id="travel">
             <h1>Your Personal Travel Guide</h1>
             <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
             <img src="Resources/Images/camp.jpg" alt="Campsite">
     </div>
-
-        
-        <script src="" async defer></script>
+    <!-- Coming Soon -->
+    <div id="coming">
+        <img src="Resources/Images/phone.png" alt="phone.png">
+        <h1>Coming Soon for iPhone and Android</h1>
+        <p><a href="#"> Download Excursion (Coming Soon!)</a></p>
+    </div>
+    <!-- Footer -->
+    <footer>
+        <p>© Excursion</p>        
+    </footer>
     </body>
 </html>
